--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "ionscript-hello-website",
+    "name": "ionscript-html-game-starter",
     "version": "0.1.0",
     "license": "MIT",
     "scripts": {
@@ -15,7 +15,8 @@
     },
     "dependencies": {
         "@glas/parcel-bundler": "^1.12.4",
-        "ionscript": "^0.3.8",
+        "@glas/platform": "^0.2.0",
+        "ionscript": "^0.4.1",
         "react": "^17.0.1",
         "react-dom": "^17.0.1"
     },
